crates/polaris_tools/tests/compile_fail/toolset_method_mut_self.rs
use polaris_tools::{tool, toolset, ToolError};

struct MyTools;

#[toolset]
impl MyTools {
    #[tool]
    /// &mut self is not supported.
    async fn bad_method(&mut self, name: String) -> Result<String, ToolError> {
        Ok(name)
    }
}

fn main() {}
